plugins {
    id 'java-library'
    id 'maven-publish'
}

group = 'com.dervarex.minified.worlds'
description = "Utility for Reading and Modifying Minecraft Worlds (26.1+)"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }

    withSourcesJar()
    withJavadocJar()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'

    implementation 'org.apiguardian:apiguardian-api:1.1.2'
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    compileOnly 'org.jetbrains:annotations:24.1.0'
    implementation project(":minified-utils")
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs '--add-modules', 'jdk.httpserver'
}
